[package]
name        = "ntstatus"
description = "NTSTATUS bindings for Rust"
version     = "0.1.1"
authors     = ["Kento Oki <hrn832@protonmail.com>"]
repository  = "https://github.com/kkent030315/ntstatus"
keywords    = ["windows", "ntstatus", "ntapi", "winapi"]
license     = "Apache-2.0"
edition     = "2021"
readme      = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["std"]
std = []

[build-dependencies]
handlebars = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
